--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,8 @@
 
                 {{ form.submit(class="btn btn-primary") }}
 
+                <a role="button" class="btn btn-secondary" href="{{ url_for('index') }}" >返回</a>
+
             </form>
         </div>
     </div>
